[build-system]
requires = ['hatchling']
build-backend = "hatchling.build"

[project]
name = "dbgym"
version = "0.1.3"
authors = [
  { name="DBGym Team", email="jiaxuan@cs.stanford.edu" },
]
description = "DBGym: platform for relational database benchmark RDBench"
readme = "README.md"
license='MIT'
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    'matplotlib>=3.7.2',
    'numpy>=1.25.2',
    'pandas>=2.0.3',
    'scikit_learn>=1.3.0',
    'torch>=2.0.1',
    'torch_geometric>=2.3.1',
    'xgboost>=1.7.6',
    'tensorboard>=2.14.1',
    'pandas>=1.5.3'
    'yacs>=0.1.8'
    'requests>=2.31.0'
]

[project.urls]
"Homepage" = "https://github.com/JiaxuanYou/DBGym"
"Bug Tracker" = "https://github.com/JiaxuanYou/DBGym/issues"
