[build-system]
requires = ['hatchling']
build-backend = "hatchling.build"

[project]
name = "dbgym"
version = "0.1.2"
authors = [
  { name="DBGym Team", email="dbgym@googlegroups.com" },
]
description = "DBGym: platform for ML research and application on databases"
readme = "README.md"
license='MIT'
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    'numpy',
    'pandas',
    'requests',
    'scikit_learn',
    'tensorboard',
    'torch',
    'torch_geometric',
    'tqdm',
    'xgboost',
    'yacs',
]

[project.urls]
"Homepage" = "https://github.com/JiaxuanYou/DBGym"
"Bug Tracker" = "https://github.com/JiaxuanYou/DBGym/issues"
